MET-6258 update pom with newer libraries and related changes